# falcon-output

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  mac.yml  windows.yml
Source/: FalconInput.cpp  FalconInput.h  FalconInputEditor.cpp  FalconInputEditor.h  FalconOutput.cpp  FalconOutput.h  FalconOutputEditor.cpp  FalconOutputEditor.h  OpenEphysLib.cpp  StreamPlugin.cpp  StreamPlugin.h  StreamPluginEditor.cpp  StreamPluginEditor.h  channel.fbs
clients/C++/: CMakeLists.txt  README.md  channel.fbs  client.cpp
clients/Python/: ContinuousData.py  realtime_multi_channel_plotter.py  test_client.py
